@startuml

title __SOLUTION's Class Diagram__\n

  namespace solid.openclosed.solution {
    class solid.openclosed.solution.Circle {
        ~ radius : double
        ~ calculateArea()
    }
  }
  

  namespace solid.openclosed.solution {
    class solid.openclosed.solution.Main {
        {static} + main()
    }
  }
  

  namespace solid.openclosed.solution {
    class solid.openclosed.solution.Rectangle {
        ~ height : double
        ~ width : double
        ~ calculateArea()
    }
  }
  

  namespace solid.openclosed.solution {
    abstract class solid.openclosed.solution.Shape {
        {static} + calculateSumOfAllAreas()
        {abstract} ~ calculateArea()
    }
  }
  

  solid.openclosed.solution.Circle -up-|> solid.openclosed.solution.Shape
  solid.openclosed.solution.Rectangle -up-|> solid.openclosed.solution.Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
